<resources>
    <string name="app_name">Inventory-I</string>
    <string name="productName">Product name</string>
    <string name="productPrice">Product price</string>
    <string name="productQuantity">Product quantity</string>
    <string name="supplierName">Supplier name</string>
    <string name="supplierPhone">Supplier phone</string>
    <string name="addToInventory">Add</string>
    <string name="viewResult">Show All</string>
    <string name="error">You must enter a value.</string>
    <string name="success">Product added successfully.</string>
    <string name="error_msg">Failed to add the product.</string>
    <string name="product">Product:</string>
    <string name="quantity">Quantity:</string>
    <string name="separator">|</string>
</resources>
